--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation libs.bcpkix.jdk15to18
     implementation libs.bcprov.jdk15to18
     implementation libs.hiddenapibypass
+    implementation libs.material
 }
 import java.security.MessageDigest
 
